added 2nd commit

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>LOGANATHAN CONSTRUCTION</title>
   </head>
   <h1>LOGANATHAN CONSTRUCTION</h1>
+  <h1>Niveth</h1>
   <body>
     <img width="250px" src="Gold Black Modern Real Estate Logo.png" alt="" />
   </body>
-  <p>i do it for my dad</p>
+  <p>i do it for my dad finally done</p>
 </html>
